[gd_scene load_steps=38 format=3 uid="uid://3khvdhi6xjou"]

[ext_resource type="Script" path="res://Scripts/Character.gd" id="1_2vnqn"]
[ext_resource type="Script" path="res://Scripts/Components/WeaponManager.gd" id="2_56hl0"]
[ext_resource type="Script" path="res://Scripts/Components/PhysicsInterpolator3D.gd" id="2_sjpk7"]
[ext_resource type="Script" path="res://Scripts/Player/ScreenEffectController.gd" id="3_0wi8h"]
[ext_resource type="Script" path="res://Scripts/Player/PlayerController.gd" id="3_2w6yp"]
[ext_resource type="Script" path="res://Scripts/Components/HeadLean.gd" id="4_6ny3q"]
[ext_resource type="Script" path="res://Scripts/Player/CharacterStateManager.gd" id="4_8v6om"]
[ext_resource type="Script" path="res://Scripts/Components/Punch.gd" id="4_dh8ax"]
[ext_resource type="Script" path="res://Scripts/CharacterStates/CharacterStateDefault.gd" id="5_018c5"]
[ext_resource type="Script" path="res://Scripts/CharacterStates/CharacterStateInAir.gd" id="5_t1r06"]
[ext_resource type="Script" path="res://Scripts/CharacterStates/CharacterStateJumping.gd" id="6_58h4i"]
[ext_resource type="Script" path="res://Scripts/Player/FPSView.gd" id="6_knxow"]
[ext_resource type="Script" path="res://Scripts/Components/HeldWeaponFollow.gd" id="7_atuhb"]
[ext_resource type="Script" path="res://Scripts/Components/HeadBobSettings.gd" id="7_cdgt3"]
[ext_resource type="Script" path="res://Scripts/Components/HeadBob.gd" id="8_t41f4"]
[ext_resource type="Script" path="res://Scripts/Components/ArmoredHealth.gd" id="9_t5fjf"]
[ext_resource type="Script" path="res://Scripts/Player/Reticle.gd" id="9_xcwwv"]
[ext_resource type="Script" path="res://Scripts/CharacterStates/CharacterStateDestroyed.gd" id="10_8wix2"]
[ext_resource type="Script" path="res://Scripts/Components/AmmoManager.gd" id="10_34wce"]
[ext_resource type="Script" path="res://Scripts/Player/PlayerHeadPunchController.gd" id="11_gj7m3"]
[ext_resource type="Script" path="res://Scripts/Components/HealthManager.gd" id="12_ijkr7"]
[ext_resource type="Script" path="res://Scripts/Player/PlayerWeaponEquipController.gd" id="12_kn0qb"]
[ext_resource type="Script" path="res://Scripts/Player/PlayerSoundController.gd" id="13_32xeu"]
[ext_resource type="AudioStream" uid="uid://c12i0eymy6qov" path="res://Assets/Audio/Steps/StepsRandomizer.tres" id="14_j633g"]
[ext_resource type="AudioStream" uid="uid://y7ylwct4yro8" path="res://Assets/Audio/Thuds/ThudsRandomizer.tres" id="16_b7esa"]
[ext_resource type="Script" path="res://Scripts/Components/Hitbox.gd" id="17_0i7jp"]
[ext_resource type="Environment" uid="uid://kooncs6pbi5u" path="res://Assets/WorldEnvironments/DefaultWorldEnvironment.tres" id="18_bxbch"]
[ext_resource type="Script" path="res://Scripts/Interactable/Interactor.gd" id="25_22kx5"]
[ext_resource type="Script" path="res://Scripts/Player/PlayerRecoilController.gd" id="27_tf472"]
[ext_resource type="Script" path="res://Scripts/Item/ItemManager.gd" id="32_8g535"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_22kd6"]
radius = 0.3
height = 1.75

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_brmud"]
radius = 0.25
height = 1.75

[sub_resource type="CapsuleMesh" id="CapsuleMesh_v53qw"]
radius = 0.25
height = 1.5

[sub_resource type="Animation" id="Animation_5bp7k"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Neck/PhysicsInterpolator3D/HeadBobAndPunchPivot/LeanPivot/FPSView/Hands/HeldWeaponFollow/RecoilPivot/WeaponModelPivot:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Neck/PhysicsInterpolator3D/HeadBobAndPunchPivot/LeanPivot/FPSView/Hands/HeldWeaponFollow/RecoilPivot/WeaponModelPivot:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_l5rml"]
resource_name = "ReadyWeapon"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Neck/PhysicsInterpolator3D/HeadBobAndPunchPivot/LeanPivot/FPSView/Hands/HeldWeaponFollow/RecoilPivot/WeaponModelPivot:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.8),
"transitions": PackedFloat32Array(1, 2, 1.62451),
"update": 0,
"values": [Vector3(-1.02392, -0.338079, 0.11838), Vector3(0.0599172, 0, 0), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Neck/PhysicsInterpolator3D/HeadBobAndPunchPivot/LeanPivot/FPSView/Hands/HeldWeaponFollow/RecoilPivot/WeaponModelPivot:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 0.8),
"transitions": PackedFloat32Array(1, 2, 1.62451),
"update": 0,
"values": [Vector3(0.125099, -0.328225, 0.096025), Vector3(0, 0.0205488, -0.0651332), Vector3(0, 0, 0)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WeaponManager")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"readyWeapon"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3brnx"]
_data = {
"RESET": SubResource("Animation_5bp7k"),
"ReadyWeapon": SubResource("Animation_l5rml")
}

[sub_resource type="SphereShape3D" id="SphereShape3D_gfv8i"]
radius = 0.24

[node name="Player" type="CharacterBody3D"]
physics_interpolation_mode = 1
collision_layer = 6
script = ExtResource("1_2vnqn")

[node name="PlayerController" type="Node" parent="." node_paths=PackedStringArray("fpsViewCamera", "neck")]
script = ExtResource("3_2w6yp")
fpsViewCamera = NodePath("../Neck/PhysicsInterpolator3D/HeadBobAndPunchPivot/LeanPivot/FPSView")
neck = NodePath("../Neck")

[node name="ScreenEffectController" type="Node" parent="."]
script = ExtResource("3_0wi8h")

[node name="HeadPunchController" type="Node" parent="." node_paths=PackedStringArray("stateManager", "stateInAir", "headPunch")]
script = ExtResource("11_gj7m3")
stateManager = NodePath("../CharacterStateManager")
stateInAir = NodePath("../CharacterStateManager/CharacterStateInAir")
headPunch = NodePath("../HeadPunch")

[node name="HeadPunch" type="Node" parent="." node_paths=PackedStringArray("target")]
script = ExtResource("4_dh8ax")
target = NodePath("../Neck/PhysicsInterpolator3D/HeadBobAndPunchPivot")

[node name="HeadBob" type="Node" parent="." node_paths=PackedStringArray("target", "stateManager")]
script = ExtResource("8_t41f4")
target = NodePath("../Neck/PhysicsInterpolator3D/HeadBobAndPunchPivot")
stateManager = NodePath("../CharacterStateManager")

[node name="HeadLean" type="Node" parent="." node_paths=PackedStringArray("target", "stateManager")]
script = ExtResource("4_6ny3q")
target = NodePath("../Neck/PhysicsInterpolator3D/HeadBobAndPunchPivot/LeanPivot")
stateManager = NodePath("../CharacterStateManager")

[node name="PlayerSoundController" type="Node" parent="." node_paths=PackedStringArray("stateManager", "headBob", "groundShapeCast", "jumpStreamPlayer", "landingStreamPlayer", "stepStreamPlayer")]
script = ExtResource("13_32xeu")
stateManager = NodePath("../CharacterStateManager")
headBob = NodePath("../HeadBob")
groundShapeCast = NodePath("../GroundShapecast")
jumpStreamPlayer = NodePath("../JumpPlayer")
landingStreamPlayer = NodePath("../LandingPlayer")
stepStreamPlayer = NodePath("../FootstepPlayer")

[node name="ArmoredHealth" type="Node" parent="."]
script = ExtResource("9_t5fjf")
useCustomArmor = true
customArmor = 50.0
useCustomHealth = true
customHealth = 50.0

[node name="ItemManager" type="Node" parent="."]
script = ExtResource("32_8g535")

[node name="AmmoManager" type="Node" parent="."]
script = ExtResource("10_34wce")

[node name="WeaponManager" type="Node" parent="." node_paths=PackedStringArray("weaponModelPivot", "handsAnimationPlayer")]
script = ExtResource("2_56hl0")
weaponModelPivot = NodePath("../Neck/PhysicsInterpolator3D/HeadBobAndPunchPivot/LeanPivot/FPSView/Hands/HeldWeaponFollow/RecoilPivot/WeaponModelPivot")
handsAnimationPlayer = NodePath("../HandsAnimationPlayer")
useFirstPersonMode = true

[node name="PlayerWeaponEquipController" type="Node" parent="."]
script = ExtResource("12_kn0qb")

[node name="PlayerRecoilController" type="Node" parent="." node_paths=PackedStringArray("recoilPunch")]
script = ExtResource("27_tf472")
recoilPunch = NodePath("../Neck/PhysicsInterpolator3D/HeadBobAndPunchPivot/LeanPivot/FPSView/Hands/HeldWeaponFollow/RecoilPunch")

[node name="CharacterHealthManager" type="Node" parent="." node_paths=PackedStringArray("health", "characterStateManager")]
script = ExtResource("12_ijkr7")
health = NodePath("../ArmoredHealth")
characterStateManager = NodePath("../CharacterStateManager")

[node name="CharacterStateManager" type="Node" parent="." node_paths=PackedStringArray("stateDefault", "stateJumping", "stateInAir", "stateDestroyed")]
script = ExtResource("4_8v6om")
stateDefault = NodePath("CharacterStateDefault")
stateJumping = NodePath("CharacterStateJumping")
stateInAir = NodePath("CharacterStateInAir")
stateDestroyed = NodePath("CharacterStateDestroyed")

[node name="CharacterStateDefault" type="Node" parent="CharacterStateManager"]
script = ExtResource("5_018c5")

[node name="HeadBobSettings" type="Node" parent="CharacterStateManager/CharacterStateDefault"]
script = ExtResource("7_cdgt3")

[node name="CharacterStateInAir" type="Node" parent="CharacterStateManager"]
script = ExtResource("5_t1r06")
acceleration = 33.0
maxSpeed = 2.5
maxSpeedEnforcement = 5.0
friction = 1.5

[node name="CharacterStateJumping" type="Node" parent="CharacterStateManager"]
script = ExtResource("6_58h4i")
maxSpeed = 4.0

[node name="CharacterStateDestroyed" type="Node" parent="CharacterStateManager"]
script = ExtResource("10_8wix2")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Reticle" type="CenterContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("9_xcwwv")

[node name="CollisionShapeStanding" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.875, 0)
shape = SubResource("CapsuleShape3D_22kd6")

[node name="HitboxStanding" type="Area3D" parent="."]
collision_layer = 8
collision_mask = 0
monitoring = false
script = ExtResource("17_0i7jp")

[node name="CollisionShape3D" type="CollisionShape3D" parent="HitboxStanding"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.875, 0)
shape = SubResource("CapsuleShape3D_brmud")

[node name="StandingNeckPosition" type="Marker3D" parent="."]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 1.5, 0)

[node name="CrouchingNeckPosition" type="Marker3D" parent="."]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 1, 0)

[node name="Neck" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="PhysicsInterpolator3D" type="Node3D" parent="Neck"]
script = ExtResource("2_sjpk7")

[node name="HeadBobAndPunchPivot" type="Node3D" parent="Neck/PhysicsInterpolator3D"]

[node name="LeanPivot" type="Node3D" parent="Neck/PhysicsInterpolator3D/HeadBobAndPunchPivot"]

[node name="DecorHead" type="CSGSphere3D" parent="Neck/PhysicsInterpolator3D/HeadBobAndPunchPivot/LeanPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.234992, 0)
layers = 4
radius = 0.169382

[node name="FPSView" type="Camera3D" parent="Neck/PhysicsInterpolator3D/HeadBobAndPunchPivot/LeanPivot" node_paths=PackedStringArray("subViewport", "viewportCamera", "headPunch", "characterStateManager")]
cull_mask = 1047553
current = true
script = ExtResource("6_knxow")
subViewport = NodePath("SubViewportContainer/SubViewport")
viewportCamera = NodePath("SubViewportContainer/SubViewport/Camera3D")
headPunch = NodePath("Hands/HeldWeaponFollow/RecoilPunch")
characterStateManager = NodePath("../../../../../CharacterStateManager")

[node name="Interactor" type="RayCast3D" parent="Neck/PhysicsInterpolator3D/HeadBobAndPunchPivot/LeanPivot/FPSView"]
target_position = Vector3(0, 0, -3)
script = ExtResource("25_22kx5")

[node name="Hands" type="Node3D" parent="Neck/PhysicsInterpolator3D/HeadBobAndPunchPivot/LeanPivot/FPSView"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.14, -0.11, -0.445)

[node name="HeldWeaponFollow" type="Node3D" parent="Neck/PhysicsInterpolator3D/HeadBobAndPunchPivot/LeanPivot/FPSView/Hands"]
script = ExtResource("7_atuhb")

[node name="RecoilPivot" type="Node3D" parent="Neck/PhysicsInterpolator3D/HeadBobAndPunchPivot/LeanPivot/FPSView/Hands/HeldWeaponFollow"]

[node name="WeaponModelPivot" type="Node3D" parent="Neck/PhysicsInterpolator3D/HeadBobAndPunchPivot/LeanPivot/FPSView/Hands/HeldWeaponFollow/RecoilPivot"]

[node name="HeadBob" type="Node" parent="Neck/PhysicsInterpolator3D/HeadBobAndPunchPivot/LeanPivot/FPSView/Hands/HeldWeaponFollow" node_paths=PackedStringArray("target", "stateManager")]
script = ExtResource("8_t41f4")
isPrimary = false
target = NodePath("../RecoilPivot/WeaponModelPivot")
stateManager = NodePath("../../../../../../../../CharacterStateManager")
amplitudeY = 0.008
amplitudeX = 0.005

[node name="RecoilPunch" type="Node" parent="Neck/PhysicsInterpolator3D/HeadBobAndPunchPivot/LeanPivot/FPSView/Hands/HeldWeaponFollow" node_paths=PackedStringArray("target")]
script = ExtResource("4_dh8ax")
target = NodePath("../RecoilPivot")
punchLerpSpeed = 30.0
punchDecayLerpSpeed = 15.0
maxTranslation = Vector3(0.05, 0.05, 0.3)

[node name="SubViewportContainer" type="SubViewportContainer" parent="Neck/PhysicsInterpolator3D/HeadBobAndPunchPivot/LeanPivot/FPSView"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="SubViewport" type="SubViewport" parent="Neck/PhysicsInterpolator3D/HeadBobAndPunchPivot/LeanPivot/FPSView/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="Neck/PhysicsInterpolator3D/HeadBobAndPunchPivot/LeanPivot/FPSView/SubViewportContainer/SubViewport"]
cull_mask = 2
environment = ExtResource("18_bxbch")
current = true
fov = 55.0

[node name="PhysicsInterpolator3D" type="Node3D" parent="."]
script = ExtResource("2_sjpk7")

[node name="DecorCapsule" type="MeshInstance3D" parent="PhysicsInterpolator3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0)
layers = 4
mesh = SubResource("CapsuleMesh_v53qw")
skeleton = NodePath("../..")

[node name="FootstepPlayer" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("14_j633g")
volume_db = -10.0
pitch_scale = 0.75
max_polyphony = 2
bus = &"WorldSFX"

[node name="JumpPlayer" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("14_j633g")
volume_db = 10.0
pitch_scale = 1.1
bus = &"WorldSFX"

[node name="LandingPlayer" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("16_b7esa")
volume_db = -10.0
bus = &"WorldSFX"

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.706736, 0.286414, -0.646909, 0, 0.914388, 0.404838, 0.707477, -0.286114, 0.646231, -2.59444, 3.74238, 1.96478)

[node name="HandsAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3brnx")
}

[node name="GroundShapecast" type="ShapeCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.195474, 0)
shape = SubResource("SphereShape3D_gfv8i")
target_position = Vector3(0, -0.05, 0)
